rebrand with new name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com_xpert_testimonials",
+  "name": "com_xmonials",
   "version": "1.0.0",
   "description": "Xpert Testimonial",
   "author": "ThemeXpert <info@themexpert.com>",
